--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ nav {
   left: 50%;
   transform: translateX(-50%);
   width: 100vw;
-  background: url('images/hero-bg.png') center/cover no-repeat;
+  background: url('images/hero-bg.webp') center/cover no-repeat;
   z-index: -2;
 }
 
